--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <html>
-<head><title>Pendity Software Style Guide
-</title></head>
+<head>
+<title>Pendity Software Style Guide
+	</title>
+<link rel="stylesheet" type="text/css"
+	href="style.css"/>
+</head>
 <body>
-<div><img src="imagem.png"/><p>Pendity
-	Software</p></div>
-<div><h1>Pendity Software</h1>
-<h2>Style Guide</h2></div>
-<div>
-<p><a href="suggestion-new.html">New
-	Suggestion</a></p>
-<p>Admin Only!<br/>
+<div id="icon"><img src="logo.png"/>
+	</div>
+<div id="header">
+<h1>Pendity Software</h1>
+<h2>Style Guide</h2>	
+</div>
+<div id="links">
+<a href="suggestion-new.html">New
+	Suggestion</a>
+<p>Admin Only!</p>
 <a href="user-new.html">New User</a>
-	</p></div>
-<div>This is the page for the style guide.
+</div>
+<div id="main">
+<p>This is the page for the style guide.
+</p>
+</div>
 </body>
 </html>
